--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.1.0",
+    "@faker-js/faker": "^7.6.0",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.3",
+    "firebase": "^9.15.0",
+    "next": "^12.3.4",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-moment": "^1.1.2",
+    "recoil": "^0.7.6",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "postcss": "^8.4.20",
+    "tailwind-scrollbar": "^2.0.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
 }
